--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -3,10 +3,10 @@
         android:id="@+id/camera_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-    <com.khalti.qreye.widget.DetectorView
-        android:id="@+id/detector_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+<!--    <com.khalti.qreye.widget.DetectorView-->
+<!--        android:id="@+id/detector_view"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"/>-->
 <!--    <android.support.design.widget.CoordinatorLayout-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="match_parent"-->
